--- a/challenge21/index.html
+++ b/challenge21/index.html
@@ -5,11 +5,28 @@
         <title>Challenge 20</title>
         <style>
             body { font-family: sans-serif }
-            label { display: block }
             input { margin-bottom: 10px }
+
+            .label, nav{
+                width: 100%;
+                text-align: center;
+            }
+
+            
+
         </style>
     </head>
     <body>
+
+        <div class="label">
+            <input data-lb="painel"/>
+        </div>
+        <nav>
+            <button data-btn="start">Start</button>
+            <button data-btn="stop">Stop</button>
+            <button data-btn="reset">Reset</button>
+        </nav>
         
     </body>
+    <script src="main.js"></script>        
 </html>
