--- a/challenge28/index.html
+++ b/challenge28/index.html
@@ -13,18 +13,21 @@
             </form>            
         </div>
         <br/>
+        <div data-js="status"></div>
+        <br/>
         <div class="infos">
             <label>Logradouro:</label>
             <span data-js="logradouro">-</span><br/>
             <label>Bairro:</label>
             <span data-js="bairro">-</span><br/>
             <label>Estado:</label>
-            <span data-js="bairro">-</span><br/>
+            <span data-js="uf">-</span><br/>
             <label>Cidade:</label>
             <span data-js="cidade">-</span><br/>
             <label>CEP:</label>
             <span data-js="cep">-</span><br/>
-        </div>        
+        </div>
+        <script src="../lib_dom/dom.js"></script>       
         <script src="main.js"></script>
     </body>
 </html>  
